--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,9 @@ repos:
     hooks:
       - id: terraform_fmt
       - id: terraform_docs
-        args:
-          - '--args=--lockfile=false'
+        args: ["markdown", "table", "--output-file", "README.md", "./tf"]
+        # args:
+        #   - '--args=--lockfile=false'
       - id: terraform_tflint
         args:
           - '--args=--only=terraform_deprecated_interpolation'
