--- a/ansible/roles/k8s/tasks/install-k8s.yml
+++ b/ansible/roles/k8s/tasks/install-k8s.yml
@@ -1,35 +1,71 @@
 ---
+
+- name: Configure node, disable swap and enabled modules overlay, br_netfilter and config sysctl
+  block:
+    - name: Disable swap
+      ansible.builtin.shell:
+        cmd: swapoff -a
+
+    - name: Comment swap in /etc/fstab
+      ansible.builtin.shell:
+        cmd: sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+
+    - name: Create file for load modules overlay and br_netfilter
+      ansible.builtin.copy:
+        content: |
+          overlay
+          br_netfilter
+        dest: /etc/modules-load.d/k8s.conf
+
+    - name: Add modules overlay and br_netfilter
+      community.general.modprobe:
+        name: "{{ item }}"
+        state: present
+      loop:
+        - overlay
+        - br_netfilter
+
+    - name: Create file for config sysctl
+      ansible.builtin.copy:
+        content: |
+          net.bridge.bridge-nf-call-iptables  = 1
+          net.bridge.bridge-nf-call-ip6tables = 1
+          net.ipv4.ip_forward                 = 1
+        dest: /etc/sysctl.d/k8s.conf
+
+    - name: sysctl --system
+      ansible.builtin.shell:
+        cmd: sysctl --system
+
 - name: Install dependencies
   ansible.builtin.apt:
     pkg: "{{ dependencies }}"
     state: latest
     update_cache: true
 
+- name: Create dir keyrings in /etc/apt
+  ansible.builtin.file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
+
+- name: Download keyrings of k8s
+  ansible.builtin.get_url:
+    url: "{{ url_key_k8s }}"
+    dest: /tmp/k8s.key
+    mode: '0644'
+  register: download_key_k8s
+
+- name: Create gpg key for repo k8s
+  ansible.builtin.shell:
+    cmd: cat /tmp/k8s.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+  when: download_key_k8s.changed
+
 - name: Add repo k8s
-  block:
-    - name: Create dir keyrings in /etc/apt
-      ansible.builtin.file:
-        path: /etc/apt/keyrings
-        state: directory
-        mode: '0755'
-
-    - name: Download keyrings of k8s
-      ansible.builtin.get_url:
-        url: https://pkgs.k8s.io/core:/stable:/v1.30/deb/Release.key
-        dest: /tmp/k8s.key
-        mode: '0644'
-      register: download_key_k8s
-
-    - name: Create gpg key for repo k8s
-      ansible.builtin.shell:
-        cmd: cat /tmp/k8s.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-      when: download_key_k8s.changed
-    
-    - name: Add repo k8s
-      ansible.builtin.apt_repository:
-        repo: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.30/deb/ /"
-        state: present
-        filename: kubernetes.list
+  ansible.builtin.apt_repository:
+    repo: "{{ k8s_repo }}"
+    state: present
+    filename: kubernetes.list
 
 - name: Install k8s (kubeadm, kubelet and kubectl)
   ansible.builtin.apt:
@@ -39,7 +75,7 @@
       - kubectl
     state: latest
     update_cache: true
-  notify: 
+  notify:
     - Mark hold pkg
 
 - name: Enable kublet
